Fixed username being cut off in profile menu

--- a/ghost/admin/app/styles/layouts/main.css
+++ b/ghost/admin/app/styles/layouts/main.css
@@ -284,6 +284,8 @@
 }
 
 .gh-user-name {
+    display: inline-block;
+    width: 188px;
     margin: 1px 0 0;
     padding: 0;
     word-break: break-all;
@@ -291,13 +293,14 @@
     letter-spacing: 0;
     font-weight: 600;
     line-height: 1.2em;
-    max-width: 160px;
     text-overflow: ellipsis;
-    overflow-x: hidden;
+    overflow: hidden;
     white-space: nowrap;
 }
 
 .gh-user-email {
+    display: inline-block;
+    width: 188px;
     margin: 4px 0 0;
     padding: 0;
     word-break: break-all;
@@ -305,9 +308,8 @@
     font-weight: 400;
     line-height: 1.2em;
     color: var(--middarkgrey);
-    max-width: 160px;
     text-overflow: ellipsis;
-    overflow-x: hidden;
+    overflow: hidden;
     white-space: nowrap;
 }
 
